# BuildConnector

./: .gitignore  CMakeLists.txt  README.md  build.cpp  compile.cpp  compile.h  crash.cpp  crash.h  main.cpp  network_client.cpp  network_client.h  packman.cpp  packman.h  parsing.cpp  parsing.h  potato.cpp  utils.cpp  utils.h  variables.cpp  variables.h
